<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/purple_200"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/radio_button">

    </RadioButton>

    <CheckBox
        android:id="@+id/id_checkBox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/check_box">

    </CheckBox>

    <Switch
        android:id="@+id/id_switch"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/switch_button">

    </Switch>

    <ImageButton
        android:id="@+id/id_imageButton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>